# sazanami

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml  example.yaml  rustfmt.toml  setup-dev.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
licenses/aya-rs/: LICENSE-MIT
misc/: ss-ahead.json  ss-plain.json  ss-stream.json  tuic-cert.pem  tuic-config.json  tuic-key.pem  vmess-config.json
sazanami/: Cargo.toml
sazanami-api/: Cargo.toml
sazanami-common/: Cargo.toml
sazanami-common/src/: lib.rs
sazanami-dns/: Cargo.toml  README.md
sazanami-dns/examples/: simple_dns.rs
sazanami-dns/src/: hosts.rs  lib.rs  main.rs  resolver.rs  server.rs
sazanami-ebpf/: Cargo.toml
sazanami-ebpf/src/: main.rs
sazanami-ip-pool/: Cargo.toml  README.md
sazanami-ip-pool/src/: lib.rs
sazanami-proto/: Cargo.toml
sazanami-proto/src/: lib.rs  socks5.rs  wire.rs
sazanami-ringo/: Cargo.toml  README.md
sazanami-ringo/examples/: hash.rs
sazanami-ringo/src/: jump.rs  karger.rs  lib.rs
sazanami-sys/: Cargo.toml  README.md
sazanami-sys/src/: lib.rs  utils.rs
sazanami-sys/src/dns/: linux.rs  mod.rs
sazanami-sys/src/tun/: linux.rs  mod.rs
sazanami-tun/: Cargo.toml  README.md
sazanami-tun/examples/: packet_log.rs
sazanami-tun/src/: device.rs  lib.rs
sazanami-tun/src/socket/: darwin.rs  linux.rs  mod.rs
sazanami/src/: main.rs  utils.rs
sazanami/src/api/: mod.rs
sazanami/src/config/: config.rs  mod.rs  rules.rs  server.rs
sazanami/src/fake_dns/: mod.rs
sazanami/src/io/: copy.rs  ext.rs  mod.rs  stream.rs
sazanami/src/metrics/: mod.rs
sazanami/src/proxy/: dia_relay.rs  mod.rs  server.rs
sazanami/src/proxy/relay/: mod.rs
sazanami/src/proxy/relay/raw/: mod.rs
sazanami/src/proxy/relay/shadowsocks/: digest.rs  mod.rs
sazanami/src/proxy/relay/shadowsocks/tcp/: aead.rs  mod.rs  stream.rs
sazanami/src/proxy/relay/socks5/: mod.rs  tcp.rs  udp.rs
sazanami/src/proxy/relay/tuic/: connection.rs  mod.rs  utils.rs
sazanami/src/proxy/relay/vmess/: aead.rs  aead_header.rs  cipher.rs  kdf.rs  mod.rs  vmess_stream.rs
sazanami/src/storage/: mod.rs
sazanami/src/tun2proxy/: mod.rs  router.rs  session.rs
xtask/: Cargo.toml
xtask/src/: build_ebpf.rs  run.rs
