[package]
name = "sazanami-ringo"
version = "0.1.0"
edition = "2021"
authors = ["Hanaasagi <ambiguous404@gmail.com>"]
license = "MIT OR Apache-2.0"
description = """
Consistent Hashing for Rust
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10.6"
rand = "0.8.5"

[dev-dependencies]
md-5 = "0.10.5"
