[package]
name = "sazanami-tun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bitvec = "1.0.1"
cidr = "0.2.1"
libc = "0.2.142"
parking_lot = "0.12.1"
pnet = "0.33.0"
smoltcp = "0.9.1"
# tokio = { version = "1.27", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
tokio = { version = "1.28", features = ["macros", "rt"] }
sazanami-sys = { path= "../sazanami-sys" }
sazanami-proto = { path= "../sazanami-proto" }
log = "0.4.17"
