[package]
name = "sazanami"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
clap = { version = "4.2", features = ["derive"] }
sazanami-common = { path = "../sazanami-common", features = ["user"] }
sazanami-dns = { path = "../sazanami-dns"}
sazanami-tun = { path = "../sazanami-tun"}
sazanami-sys = { path = "../sazanami-sys"}
sazanami-proto = { path = "../sazanami-proto", features = ["tokio"] }
sazanami-ip-pool = { path = "../sazanami-ip-pool" }
anyhow = "1"
log = "0.4"
tokio = { version = "1.27", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "io-util"] }
bitvec = "1.0.1"
tracing = "0.1.37"
tracing-subscriber = {version="0.3.16", features= ["env-filter"]}
serde = { version = "1.0.159", features = ["derive", "rc"] }
url = { version = "2.3.1", features = ["serde"] }
serde_yaml = "0.9.21"
percent-encoding = "2.2.0"
parking_lot = "0.12.1"
smoltcp = "0.9.1"
bytes = "1.4.0"
trust-dns-proto = "0.22.0"
trust-dns-resolver = "0.22.0"
trust-dns-server = "0.22.0"
async-trait = "0.1.68"
tokio-metrics = "0.2.0"
tokio-stream = { version = "0.1.12", features = ["net"] }
shadowsocks-crypto = {version = "0.5.1", features= ["v1-stream"]}
byteorder = "1.4.3"
rand = "0.8.5"
md-5 = "0.10.5"
digest = "0.10.6"
typenum = "1.16.0"

libc = "0.2.133"
hkdf = "0.12.3"
sha-1 = "0.10.0"
tokio-retry = "0.3.0"

[[bin]]
name = "sazanami"
path = "src/main.rs"

[features]

[dev-dependencies]
tempfile = "3.5.0"
