[package]
name = "sazanami"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
tuic = { git = "https://github.com/EAimTY/tuic", version = "5.0.0-pre-alpha6" }
tuic-quinn = { git = "https://github.com/EAimTY/tuic", version = "0.1.0-pre-alpha2" }
# tuic-protocol = { git = "https://github.com/EAimTY/tuic", version = "4.1.2", branch="0.8.x" }
clap = { version = "4.2", features = ["derive"] }
sazanami-common = { path = "../sazanami-common", features = ["user"] }
sazanami-dns = { path = "../sazanami-dns"}
sazanami-tun = { path = "../sazanami-tun"}
sazanami-sys = { path = "../sazanami-sys"}
sazanami-proto = { path = "../sazanami-proto", features = ["tokio"] }
sazanami-ip-pool = { path = "../sazanami-ip-pool" }
sazanami-ringo = { path = "../sazanami-ringo" }
anyhow = "1"
log = "0.4"
tokio = { version = "1.27", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "io-util", "parking_lot"] }
bitvec = "1.0.1"
tracing = "0.1.37"
tracing-subscriber = {version="0.3.17", features= ["env-filter"]}
serde = { version = "1.0.160", features = ["derive", "rc"] }
url = { version = "2.3.1", features = ["serde"] }
serde_yaml = "0.9.21"
percent-encoding = "2.2.0"
parking_lot = "0.12.1"
smoltcp = "0.9.1"
bytes = "1.4.0"
trust-dns-proto = "0.22.0"
trust-dns-resolver = "0.22.0"
trust-dns-server = "0.22.0"
async-trait = "0.1.68"
tokio-metrics = { version = "0.2.2", features = ["rt"] }
tokio-stream = { version = "0.1.12", features = ["net"] }
shadowsocks-crypto = {version = "0.5.1", features= ["v1-stream"]}
byteorder = "1.4.3"
rand = "0.8.5"
md-5 = "0.10.5"
digest = "0.10.6"
typenum = "1.16.0"

libc = "0.2.142"
sha-1 = "0.10.1"
tokio-retry = "0.3.0"

# tuic
quinn = { version = "0.9.3", default-features = false, features = ["futures-io", "runtime-tokio", "tls-rustls"] }
rustls = { version = "0.20.8", default-features = false, features = ["quic"] }
rustls-native-certs = { version = "0.6.2", default-features = false }
rustls-pemfile = { version = "1.0.2", default-features = false }
crossbeam-utils = { version = "0.8.15", default-features = false, features = ["std"] }
register-count = { version = "0.1.0", default-features = false, features = ["std"] }
uuid = { version = "1.3.1", default-features = false, features = ["serde", "std"] }
tokio-util = { version = "0.7.7", default-features = false, features = ["compat"] }
axum = "0.6.16"
once_cell = "1.17.1"
serde_json = "1.0.96"
hmac = "0.12.1"
sha2 = "0.10.6"
aes = "0.8.2"
aes-gcm = "0.10.1"
chacha20 = "0.9.1"
chacha20poly1305 = "0.10.1"
generic-array = "0.14.7"
crc32fast = "1.3.2"

[[bin]]
name = "sazanami"
path = "src/main.rs"

[features]

[dev-dependencies]
tempfile = "3.5.0"
hex-literal = "0.4.1"
